# verum

./: .clang-tidy  .clangd  .gitignore  .uncrustify.cfg  CMakeLists.txt  README.md  STANDARDS.md  cppcheck_report.xml  makefile  test.txt
cmake/: toolchain-clang.cmake
formal/: README.md
formal/model/rocq/specification/: README.md
include/: define.h  types.h
include/auxiliary/: endian.h  memory.h
include/standard/: memory.c  memory.h  types.h
include/verum/ascon/: aead.h  ascon.h  hash.h  xof.h
source/ascon/: README.md  aead.c  ascon.h  hash.c  xof.c
source/auxiliary/: memory.c
temp/ascon_std/: genkat_crypto_aead_asconaead128_ref
test/: runner.c
test/ascon/: aead.c  aead.h  ascon.h
test/unity/: unity.c  unity_config.h  unity_internals.h
